[package]
name = "gpui_squircle"
version = "1.0.1"
authors = [ "cameronpcampbell" ]
edition = "2024"
description = "squircle component for gpui."
license = "MIT"
homepage = "https://github.com/astrum-chat/gpui_squircle"

[dependencies]
gpui = "0.2.2"
gpui-macros = "0.2.2"
figma_squircle = "0.1.0"
lyon = { version = "1.0.16", features = [ "extra" ] }
anyhow = "1.0.99"
smallvec = "1.15.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Fixes "two different versions of crate `core_graphics` are being used" error.
core-text = "=21.0.0"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed" }
